--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,7 +4,7 @@
     font-family: 'Space Grotesk';
     font-style: normal;
     font-weight: 500;
-    src: url('../assets/fonts/space-grotesk-v15-latin-500.woff2') format('woff2'); 
+    src: url('/fonts/space-grotesk-v15-latin-500.woff2') format('woff2'); 
   }
 
 // Colours
