Style confirmation screen Add drop shadow to cards

--- a/src/components/CardView.scss
+++ b/src/components/CardView.scss
@@ -17,6 +17,7 @@
 
   position: relative;
   max-width: 77.5%;
+  filter: drop-shadow(1px 12.9px 22px rgba(0, 0, 0, 0.3));
 
   &__back {
     z-index: 10;
