--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -1,6 +1,7 @@
 @use "../scss/variables.scss" as var;
 
 .button {
+  cursor: pointer;
   font-family: var.$font;
   font-weight: var.$font-weight;
   background: var.$clr-violet-dark;
