Add form reducer, input masking, form validation Add error message visibility and styling Cleaned up misc stylesheet formatting and rule positioning Refactored name and cvc inputs into single component Rigged up card illustration text props to state

--- a/src/components/CardForm.scss
+++ b/src/components/CardForm.scss
@@ -13,12 +13,22 @@
     display: flex;
     flex-direction: column;
     gap: 0.5em;
-    // grows every input group to container width
     flex-grow: 1;
 
     &--cvc {
       flex-basis: 125%;
     }
+  }
+
+  &__input-wrapper {
+    display: flex;
+    gap: 0.5em;
+  }
+
+  &__group-wrapper {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
   }
 
   &__label {
@@ -37,7 +47,6 @@
     font-size: 1.125rem;
     font-weight: var.$font-weight;
     min-width: 0;
-    // grows every input to group width
     flex-grow: 1;
 
     &--error {
@@ -60,16 +69,5 @@
   &__error-message {
     color: var.$clr-red;
     font-size: 0.825rem;
-  }
-
-  &__date-group {
-    display: flex;
-    gap: 0.5em;
-  }
-
-  &__group-wrapper {
-    display: flex;
-    flex-direction: row;
-    gap: 1em;
   }
 }
